    for all block sizes from 1-byte up.
 -- For string search with GREP and GREPI, added a Boyer-Moore-Horspool
    string search algorithm for speed.
 -- Perform one strip_ansi() call in do_decomp instead of several.
 -- Remove fourth argument to safe_copy_buf to reduce code size. The 4th
    argument was always LBUF_SIZE-1.
 -- Simplify the varargs_preample family of #defines further.
 -- Use MUXCLI on both Unix and Win32 builds instead of getopt on Unix
    and correct-but-inflexible code on Win32.
 -- Improve performance of pool_alloc and pool_free.
 -- Improve performance of @aconnnect/@adisconnect.
 -- Reduce code size by around 4KB by specializing a few calls.
 -- Improve parser performance by making certain tables 'static const' or
    'const'.
 -- Reduce stack frame per-invocation overhead of TinyExec() by 688 bytes to
    138 bytes.
 -- Improve putstring() performance and therefore @dumps.
 -- Improved parser speed by a few instructions.
 -- Improve speed of TRANSLATE() and emit %t for hardtabs.
 -- Use /dev/urandom on Unix and Crypto API on Win32 to seed the random
    number generator. Fall back gracefully on pre-OSR2 Win95 to previous
    time/pid scheme.
 -- Substitutions for ##, #!, and #$ are performed at one time and therefore
    faster.
 -- @backup now allows the backup script to unload a flatfile instead of
    having the server do it. Previously, the game server unloaded a flatfile,
    and then the backup script unloaded the flatfile again.

Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Consistent file headers and comment blocks. Remove trailing spaces and
    hardtabs.
 -- Remove unused sections of #ifdef'ed out code.
 -- @pcreate and @robot now report the created dbref.
 -- say command now emits 'You say, "..."' instead of 'You say "..."'.
 -- Help for pmatch changed to reflect that the #-2 result was removed long ago.
 -- @wall now adds comma after shouts. TM3 found first.

Miscellaneous:
~~~~~~~~~~~~~
 -- Added Manual in LaTeX format.