@@ -1,6 +1,6 @@
 // flags.h -- Object flags.
 //
-// $Id: flags.h,v 1.18 2002-12-30 16:56:26 sdennis Exp $
+// $Id: flags.h,v 1.19 2003-01-31 04:17:54 sdennis Exp $
 //
 
 #include "copyright.h"
@@ -206,6 +206,7 @@ extern char *MakeCanonicalFlagName
 /* Has_location(X)  - Is X something with a location (ie plyr or obj) */
 /* Has_home(X)      - Is X something with a home (ie plyr or obj) */
 /* Has_contents(X)  - Is X something with contents (ie plyr/obj/room) */
+/* Good_dbref(X)    - Is X inside the DB? */
 /* Good_obj(X)      - Is X inside the DB and have a valid type? */
 /* Good_owner(X)    - Is X a good owner value? */
 /* Going(X)     - Is X marked GOING? */
@@ -245,8 +246,8 @@ extern char *MakeCanonicalFlagName
 #define isThing(x)  (Typeof(x) == TYPE_THING)
 #define isGarbage(x)    (Typeof(x) == TYPE_GARBAGE)
 
-#define Good_obj(x) (((x) >= 0) && ((x) < mudstate.db_top) && \
-             (Typeof(x) < NOTYPE))
+#define Good_dbref(x)   (((x) >= 0) && ((x) < mudstate.db_top))
+#define Good_obj(x)     (Good_dbref(x) && (Typeof(x) < NOTYPE))
 #define Good_owner(x)   (Good_obj(x) && OwnsOthers(x))
 
 #define Staff(x)    (Wizard(x) || Royalty(x) || ((Flags2(x) & STAFF) != 0))
